# bagtrack

./: .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  bootleg_baggie.kra
assets/: bootleg_baggie.bmp.cpp
cmake/: FindSDL2_image.cmake
script/: makeAssets.bash
src/: api.cpp  api.h  filteritems.cpp  filteritems.h  fixfmt.h  fixhttplib.h  imgui_fmt.h  infocache.cpp  infocache.h  iteminfo.cpp  iteminfo.h  itemtracker.cpp  itemtracker.h  main.cpp  messagebox.h  sdlhelpers.cpp  sdlhelpers.h  settings.cpp  settings.h  sortitems.cpp  sortitems.h  time_killer.h  tpinfo.cpp  tpinfo.h  trackerstate.cpp  trackerstate.h  version.h
src/api/: api.cpp  api.h  index.cpp  index.h  infocache.cpp  infocache.h  iteminfo.h  recipe.cpp  recipe.h  tpinfo.cpp  tpinfo.h
src/base64/: base64.cpp  base64.h
src/windows/: apikeyeditor.cpp  apikeyeditor.h  cacheallbutton.cpp  cacheallbutton.h  craftingcalculator.cpp  craftingcalculator.h  crafttool.cpp  crafttool.h  filedialog.cpp  filedialog.h  goldtracker.cpp  goldtracker.h  itemlookup.cpp  itemlookup.h  itemselector.cpp  itemselector.h  itemwidget.cpp  itemwidget.h  statsgraph.cpp  statsgraph.h  statusbar.cpp  statusbar.h  timeselector.cpp  timeselector.h  trackereverything.cpp  trackereverything.h  updatechecker.cpp  updatechecker.h  window.cpp  window.h
windows/: winbuild.bash  windeps.bash
